Fix pricing banner spacing issues

--- a/Website/frontend/assets/css/_sass/partials/_protective-services-redesign.scss
+++ b/Website/frontend/assets/css/_sass/partials/_protective-services-redesign.scss
@@ -708,16 +708,21 @@ article.protective-services-pricing {
                 }
 
                 p {
+					font-size: 24px;
+
                     &:first-of-type {
-                        width: calc(50% - 10px);
+                        width: calc(50% - 20px);
                     }
 
                     &:last-of-type {
                         margin-top: 0;
-                        width: calc(50% + 10px);
+                        width: calc(50% + 20px);
                     }
 
                     float: left;
+					.price {
+						font-size: 50px;
+					}
                 }
 				&.additional-services {
 					display: none;
@@ -802,7 +807,7 @@ article.protective-services-pricing {
 
                 @include breakpoint(small) {
                     top: 0;
-                    left: calc(50% + 120px);
+                    left: 50%;
                 }
             }
 
